
[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["KCaverly <kylebcaverly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
