
[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["KCaverly <kylebcaverly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.2.4"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
pytest = "^6.2.5"
nbterm = "^0.0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
