
[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["KCaverly <kylebcaverly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^8.0.0"

[tool.poetry.dev-dependencies]
ipython = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
